--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
   </head>
   <body>
     <div class="container">
-      <h1>Please Log In</h1>
+      <h1>Please Log in</h1>
       <form>
         <div class="form-control">
-          <input type="text" required />
           <label>Email</label>
+          <input type="text" required />
         </div>
 
         <div class="form-control">
-          <input type="password" required />
           <label>Password</label>
+
+          <input type="password" required />
         </div>
 
-        <button class="button">Log In</button>
+        <button class="button">Login</button>
 
-        <p>Dont you have an account? <a href="#">Sign up</a></p>
+        <p class="text">You don't have an account? <a href="#">Sign up</a></p>
       </form>
     </div>
     <script src="script.js"></script>
