new <a> Forgot your password

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
           <label>Password</label>
 
           <input type="password" required />
+          <a href="#">Forgot your password?</a>
         </div>
 
         <button class="button">Login</button>
 
-        <p class="text">You don't have an account? <a href="#">Sign up</a></p>
+        <p class="text">You don't have an account? <a href="#">Creat an account</a></p>
       </form>
     </div>
     <script src="script.js"></script>
