--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
       <h1>Please Log in</h1>
       <form>
         <div class="form-control">
-          <label>Email</label>
           <input type="text" required />
+
+          <label>Email</label>
         </div>
 
         <div class="form-control">
-          <label>Password</label>
-
           <input type="password" required />
+
+          <label>Password</label>
+          <a href="#">Forgot your password?</a>
         </div>
 
         <button class="button">Login</button>
 
-        <p class="text">You don't have an account? <a href="#">Sign up</a></p>
+        <p class="text">
+          You don't have an account? <a href="#">Creat an account</a>
+        </p>
       </form>
     </div>
     <script src="script.js"></script>
